Run with junithelper-core 0.9.1(tentatively)

--- a/junithelper-plugin/src/main/resources/application_en.properties
+++ b/junithelper-plugin/src/main/resources/application_en.properties
@@ -1,39 +1,28 @@
 # Preference
-Preference.Common.groupName=Common
 Preference.Common.description=Specify the source folders.
-Preference.Common.srcMainPath=Main source folder
-Preference.Common.srcTestPath=Test source folder
-Preference.TestClassGen.enabled=Generate test classes
-Preference.TestClassGen.groupName=Test class
+Preference.Common.srcMainPath=Production source code folder
+Preference.Common.srcTestPath=Test source code folder
 Preference.TestClassGen.description=Specify JUnit version and the TestCase to extend.
 Preference.TestClassGen.junitVersion=JUnit version
 Preference.TestClassGen.junitVersion3=JUnit 3.x
 Preference.TestClassGen.junitVersion4=JUnit 4.x
 Preference.TestClassGen.classToExtend=TestCase class to extend
-Preference.TestClassGen.usingJunitHelperRuntimeLib=Using JUnit Helper Runtime library.
-Preference.TestMethodGen.enabled=Generate test methods
-Preference.TestMethodGen.groupName=Test method
-Preference.TestMethodGen.delimiter= Delimiter in method name 
-Preference.TestMethodGen.enabledArgs= Include arg types in method name
-Preference.TestMethodGen.subGroupNameForArgs=Arg types in method name
-Preference.TestMethodGen.argsPrefix=Prefix
-Preference.TestMethodGen.argsDelimiter=Delimiter
-Preference.TestMethodGen.enabledReturn= Include return type in method name
-Preference.TestMethodGen.subGroupNameForReturn=Return type in method name
-Preference.TestMethodGen.returnPrefix=Prefix
-Preference.TestMethodGen.returnDelimiter=delimiter
-Preference.TestMethodGen.enabledException= Test patterns for throwing Exception
-Preference.TestMethodGen.subGroupNameForException=Exception types in method name
-Preference.TestMethodGen.exceptionPrefix=Prefix
-Preference.TestMethodGen.exceptionDelimiter=Delimiter
-Preference.TestMethodGen.includePublic= Test patterns for \"public\" methods
-Preference.TestMethodGen.includeProtected= Test patterns for \"protected\" methods
-Preference.TestMethodGen.includePackageLocal= Test patterns for \"package local\" methods
-Preference.TestMethodGen.excludesAccessors= Ignore accessors(setter/getter)
-Preference.TestMethodGen.enabledTestMethodSampleImpl= Generate template implementation
-Preference.TestMethodGen.usingMock=Mock
-Preference.TestMethodGen.subGroupNameForMock=Mock object frameworks 
-Preference.TestMethodGen.descriptionForMock=Select your favorite framework.
+Preference.TestMethodGen.delimiter=Basic delimiter 
+Preference.TestMethodGen.enabledArgs=Require Args
+Preference.TestMethodGen.argsPrefix=Prefix of args part
+Preference.TestMethodGen.argsDelimiter=Delimiter for args part
+Preference.TestMethodGen.enabledReturn=Require return type
+Preference.TestMethodGen.returnPrefix=Prefix of return type part
+Preference.TestMethodGen.returnDelimiter=Delimiter for return type
+Preference.TestMethodGen.exceptionPrefix=Prefix of exception part
+Preference.TestMethodGen.exceptionDelimiter=Delimiter for exception part
+Preference.TestMethodGen.includePublic=Require test patterns for \"public\" methods
+Preference.TestMethodGen.includeProtected=Require test patterns for \"protected\" methods
+Preference.TestMethodGen.includePackageLocal=Require test patterns for \"package local\" methods
+Preference.TestMethodGen.enabledException=Require test patterns for throwing exception 
+Preference.TestMethodGen.excludesAccessors=Exclude test patterns for accessors(setter/getter)
+Preference.TestMethodGen.enabledTestMethodSampleImpl=Generate template implementations
+Preference.TestMethodGen.descriptionForMock=Select your favorite mock object framework.
 Preference.TestMethodGen.usingMockNone=None
 Preference.TestMethodGen.usingMockEasyMock=EasyMock
 Preference.TestMethodGen.usingMockJMock2=JMock2
