--- a/junithelper-plugin/src/main/resources/application_ja.properties
+++ b/junithelper-plugin/src/main/resources/application_ja.properties
@@ -1,38 +1,27 @@
 # Preference
-Preference.Common.groupName=\u5171\u901a\u306e\u8a2d\u5b9a
 Preference.Common.description=\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 Preference.Common.srcMainPath=\u30c6\u30b9\u30c8\u5bfe\u8c61\u306e\u30bd\u30fc\u30b9\u30d5\u30a9\u30eb\u30c0
 Preference.Common.srcTestPath=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30bd\u30fc\u30b9\u30d5\u30a9\u30eb\u30c0
-Preference.TestClassGen.enabled=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
-Preference.TestClassGen.groupName=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u8a2d\u5b9a
 Preference.TestClassGen.description=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3068\u7d99\u627f\u3059\u308b\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 Preference.TestClassGen.junitVersion=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3
 Preference.TestClassGen.junitVersion3=JUnit 3.x
 Preference.TestClassGen.junitVersion4=JUnit 4.x
 Preference.TestClassGen.classToExtend=\u7d99\u627f\u3059\u308b\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9
-Preference.TestClassGen.usingJunitHelperRuntimeLib=\u30e9\u30f3\u30bf\u30a4\u30e0\u30e9\u30a4\u30d6\u30e9\u30ea\u3092\u4f7f\u7528\u3059\u308b
-Preference.TestMethodGen.enabled=\u30c6\u30b9\u30c8\u30e1\u30bd\u30c3\u30c9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
-Preference.TestMethodGen.groupName=\u30c6\u30b9\u30c8\u30e1\u30bd\u30c3\u30c9\u306e\u8a2d\u5b9a
-Preference.TestMethodGen.delimiter=\u9805\u76ee\u306e\u533a\u5207\u308a\u6587\u5b57
-Preference.TestMethodGen.enabledArgs= \u5f15\u6570\u306e\u578b\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b
-Preference.TestMethodGen.subGroupNameForArgs=\u5f15\u6570\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b\u8a2d\u5b9a
-Preference.TestMethodGen.argsPrefix=\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9
-Preference.TestMethodGen.argsDelimiter=\u533a\u5207\u308a\u6587\u5b57
-Preference.TestMethodGen.enabledReturn= \u623b\u308a\u5024\u306e\u578b\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b
-Preference.TestMethodGen.subGroupNameForReturn=\u623b\u308a\u5024\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b\u8a2d\u5b9a
-Preference.TestMethodGen.returnPrefix=\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9
-Preference.TestMethodGen.returnDelimiter=\u533a\u5207\u308a\u6587\u5b57
-Preference.TestMethodGen.enabledException= \u4f8b\u5916\u304cthrow\u3055\u308c\u308b\u30d1\u30bf\u30fc\u30f3\u3082\u30c6\u30b9\u30c8\u3059\u308b
-Preference.TestMethodGen.subGroupNameForException=throw\u3055\u308c\u308b\u4f8b\u5916\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b\u8a2d\u5b9a
-Preference.TestMethodGen.exceptionPrefix=\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9
-Preference.TestMethodGen.exceptionDelimiter=\u533a\u5207\u308a\u6587\u5b57
+Preference.TestMethodGen.delimiter=\u9805\u76ee\u306e\u533a\u5207\u308a\u6587\u5b57 
+Preference.TestMethodGen.enabledArgs=\u5f15\u6570\u306e\u578b\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b
+Preference.TestMethodGen.argsPrefix=\u30e1\u30bd\u30c3\u30c9\u540d\u306e\u4e2d\u3067\u5f15\u6570\u306e\u578b\u3092\u542b\u3081\u308b\u90e8\u5206\u306e\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9
+Preference.TestMethodGen.argsDelimiter=\u30e1\u30bd\u30c3\u30c9\u540d\u306e\u4e2d\u3067\u5f15\u6570\u306e\u578b\u3092\u542b\u3081\u308b\u90e8\u5206\u306e\u533a\u5207\u308a\u6587\u5b57
+Preference.TestMethodGen.enabledReturn=\u623b\u308a\u5024\u306e\u578b\u3092\u30e1\u30bd\u30c3\u30c9\u540d\u306b\u542b\u3081\u308b
+Preference.TestMethodGen.returnPrefix=\u30e1\u30bd\u30c3\u30c9\u540d\u306e\u4e2d\u3067\u623b\u308a\u5024\u306e\u578b\u3092\u542b\u3081\u308b\u90e8\u5206\u306e\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9
+Preference.TestMethodGen.returnDelimiter=\u30e1\u30bd\u30c3\u30c9\u540d\u306e\u4e2d\u3067\u623b\u308a\u5024\u306e\u578b\u3092\u542b\u3081\u308b\u90e8\u5206\u306e\u533a\u5207\u308a\u6587\u5b57
+Preference.TestMethodGen.exceptionPrefix=\u30e1\u30bd\u30c3\u30c9\u540d\u306e\u4e2d\u3067\u767a\u751f\u4f8b\u5916\u306e\u578b\u3092\u542b\u3081\u308b\u90e8\u5206\u306e\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9
+Preference.TestMethodGen.exceptionDelimiter=\u30e1\u30bd\u30c3\u30c9\u540d\u306e\u4e2d\u3067\u767a\u751f\u4f8b\u5916\u306e\u578b\u3092\u542b\u3081\u308b\u90e8\u5206\u306e\u533a\u5207\u308a\u6587\u5b57
 Preference.TestMethodGen.includePublic= \"public\"\u30e1\u30bd\u30c3\u30c9\u3092\u30c6\u30b9\u30c8\u5bfe\u8c61\u306b\u3059\u308b
 Preference.TestMethodGen.includeProtected= \"protected\"\u30e1\u30bd\u30c3\u30c9\u3092\u30c6\u30b9\u30c8\u5bfe\u8c61\u306b\u3059\u308b
 Preference.TestMethodGen.includePackageLocal= \"package local\"\u30e1\u30bd\u30c3\u30c9\u3092\u30c6\u30b9\u30c8\u5bfe\u8c61\u306b\u3059\u308b
+Preference.TestMethodGen.enabledException=\u4f8b\u5916\u304cthrow\u3055\u308c\u308b\u30d1\u30bf\u30fc\u30f3\u3082\u30c6\u30b9\u30c8\u3059\u308b 
 Preference.TestMethodGen.excludesAccessors= \u30a2\u30af\u30bb\u30b5(setter/getter)\u3092\u30c6\u30b9\u30c8\u5bfe\u8c61\u306b\u3057\u306a\u3044
 Preference.TestMethodGen.enabledTestMethodSampleImpl= \u30c6\u30b9\u30c8\u30e1\u30bd\u30c3\u30c9\u306e\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u5b9f\u88c5\u3092\u751f\u6210\u3059\u308b
-Preference.TestMethodGen.usingMock=\u30e2\u30c3\u30af\u3092\u4f7f\u7528\u3057\u305f\u5b9f\u88c5\u3092\u751f\u6210\u3059\u308b
-Preference.TestMethodGen.subGroupNameForMock=\u30e2\u30c3\u30af\u306e\u8a2d\u5b9a
 Preference.TestMethodGen.descriptionForMock=\u304a\u597d\u307f\u306e\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 Preference.TestMethodGen.usingMockNone=\u6307\u5b9a\u306a\u3057
 Preference.TestMethodGen.usingMockEasyMock=EasyMock
