--- a/junithelper-plugin/src/main/resources/application_ja.properties
+++ b/junithelper-plugin/src/main/resources/application_ja.properties
@@ -43,6 +43,8 @@ Dialog.Common.confirmToCreateNewFile=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u3092\
 Dialog.Common.resourceRefreshError=\u30ef\u30fc\u30af\u30b9\u30da\u30fc\u30b9\u306e\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
 Dialog.Common.selectJavaFile=Java\u30bd\u30fc\u30b9\u30d5\u30a1\u30a4\u30eb\uff08*.java\uff09\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
 Dialog.Common.notTestClass=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
+Dialog.Common.confirmToChangeToJUnitVersion3=JUnit 3.x\u306e\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u306b\u5909\u66f4\u3057\u307e\u3059\u304b\uff1f
+Dialog.Common.confirmToChangeToJUnitVersion4=JUnit 4.x\u306e\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u306b\u5909\u66f4\u3057\u307e\u3059\u304b\uff1f
 
 # Message
 Message.autoGenTodoMessage= TODO JUnit Helper \u306b\u3088\u308b\u81ea\u52d5\u751f\u6210
