junithelper-plugin 0.9.3 release

--- a/junithelper-plugin/src/main/resources/application_en.properties
+++ b/junithelper-plugin/src/main/resources/application_en.properties
@@ -2,6 +2,7 @@
 Preference.Common.description=Specify the source folders.
 Preference.Common.srcMainPath=Production source code folder
 Preference.Common.srcTestPath=Test source code folder
+Preference.Common.outputFileEncoding=Default file encoding
 Preference.TestClassGen.description=Specify JUnit version and the TestCase to extend.
 Preference.TestClassGen.junitVersion=JUnit version
 Preference.TestClassGen.junitVersion3=JUnit 3.x
