--- a/junithelper-plugin/src/main/resources/application_ja.properties
+++ b/junithelper-plugin/src/main/resources/application_ja.properties
@@ -2,6 +2,7 @@
 Preference.Common.description=\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 Preference.Common.srcMainPath=\u30c6\u30b9\u30c8\u5bfe\u8c61\u306e\u30bd\u30fc\u30b9\u30d5\u30a9\u30eb\u30c0
 Preference.Common.srcTestPath=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30bd\u30fc\u30b9\u30d5\u30a9\u30eb\u30c0
+Preference.Common.outputFileEncoding=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u30d5\u30a1\u30a4\u30eb\u30a8\u30f3\u30b3\u30fc\u30c7\u30a3\u30f3\u30b0
 Preference.TestClassGen.description=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3068\u7d99\u627f\u3059\u308b\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 Preference.TestClassGen.junitVersion=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3
 Preference.TestClassGen.junitVersion3=JUnit 3.x
