--- a/junithelper-core/tools/release_notes.txt
+++ b/junithelper-core/tools/release_notes.txt
@@ -5,6 +5,11 @@
 
 * Release Notes - 0.9.4
 
+** Bug
+	* Issue 46:	Compile error at generated template test code when "[]" exists after variable name
+
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
 	* Issue 45:	Supporting return type with nested generics in generating template test code
+
+
