--- a/junithelper-core/tools/release_notes.txt
+++ b/junithelper-core/tools/release_notes.txt
@@ -7,6 +7,7 @@
 
 ** Bug
 	* Issue 46:	Compile error at generated template test code when "[]" exists after variable name
+	* Issue 47:	Supporting array of array in generating template test code
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
