--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -8,6 +8,7 @@
 ** Bug
 	* Issue 46:	Compile error at generated template test code when "[]" exists after variable name
 	* Issue 47:	Supporting array of array in generating template test code
+	* Issue 48:	Compile error when the duplicated variable names exist
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
