--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -9,6 +9,7 @@
 	* Issue 46:	Compile error at generated template test code when "[]" exists after variable name
 	* Issue 47:	Supporting array of array in generating template test code
 	* Issue 48:	Compile error when the duplicated variable names exist
+	* Issue 49:	Compile error if test target method throws Throwable
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
