--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -10,6 +10,7 @@
 	* Issue 47:	Supporting array of array in generating template test code
 	* Issue 48:	Compile error when the duplicated variable names exist
 	* Issue 49:	Compile error if test target method throws Throwable
+	* Issue 50:	Compile error at instantiation test method for enum
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
