--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -11,6 +11,7 @@
 	* Issue 48:	Compile error when the duplicated variable names exist
 	* Issue 49:	Compile error if test target method throws Throwable
 	* Issue 50:	Compile error at instantiation test method for enum
+	* Issue 51:	Compile error when test target class is defined with generic class literal
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
