--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -13,6 +13,7 @@
 	* Issue 50:	Compile error at instantiation test method for enum
 	* Issue 51:	Compile error when test target class is defined with generic class literal
 	* Issue 52:	Invalid test methods are created when using anonymous inner class
+	* Issue 53:	Compile error when using inner classes of test target class
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
