--- a/junithelper-core/tools/release_notes.txt
+++ b/junithelper-core/tools/release_notes.txt
@@ -14,6 +14,7 @@
 	* Issue 51:	Compile error when test target class is defined with generic class literal
 	* Issue 52:	Invalid test methods are created when using anonymous inner class
 	* Issue 53:	Compile error when using inner classes of test target class
+	* Issue 54:	Invalid test methods are created when methods in enum
 
 ** Feature Request
 	* Issue 44:	Supporting args with nested generics in generating template test code
