Improved dialog message(related Issue 55)

--- a/junithelper-eclipse-plugin/src/main/resources/application_en.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_en.properties
@@ -41,7 +41,7 @@ Dialog.Common.notExist=Not exist.
 Dialog.Common.confirmToProceed=Proceed OK?
 Dialog.Common.notToCreateNewFilePreference=Test case file does not exist.\nPlease alter preferences if you want to generate.
 Dialog.Common.confirmToCreateNewFile=Create new test case file?
-Dialog.Common.resourceRefreshError=Resource refresh error!
+Dialog.Common.resourceRefreshError=Resource refresh error occurred.\nPlease check access permission to write on directories or files.
 Dialog.Common.selectJavaFile=Please select java source file(*.java).
 Dialog.Common.notTestClass=Please select test class file.
 Dialog.Common.confirmToChangeToJUnitVersion3=Change to JUnit 3.x test case?
