--- a/junithelper-eclipse-plugin/src/main/resources/application_ja.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_ja.properties
@@ -41,7 +41,7 @@ Dialog.Common.notExist=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u304c\u5b58\u5728\u3
 Dialog.Common.confirmToProceed=\u51e6\u7406\u3092\u7d9a\u884c\u3057\u307e\u3059\u304b\uff1f
 Dialog.Common.notToCreateNewFilePreference=\u5bfe\u5fdc\u3059\u308b\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002\u81ea\u52d5\u751f\u6210\u3057\u305f\u3044\u5834\u5408\u306f\u8a2d\u5b9a\u3092\u898b\u76f4\u3057\u3066\u4e0b\u3055\u3044\u3002
 Dialog.Common.confirmToCreateNewFile=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u3092\u65b0\u3057\u304f\u4f5c\u6210\u3057\u307e\u3059\u304b\uff1f
-Dialog.Common.resourceRefreshError=\u30ef\u30fc\u30af\u30b9\u30da\u30fc\u30b9\u306e\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
+Dialog.Common.resourceRefreshError=\u30ef\u30fc\u30af\u30b9\u30da\u30fc\u30b9\u306e\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u30d5\u30a1\u30a4\u30eb\u3084\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u66f8\u304d\u8fbc\u307f\u6a29\u9650\u3092\u78ba\u8a8d\u3057\u3066\u4e0b\u3055\u3044\u3002
 Dialog.Common.selectJavaFile=Java\u30bd\u30fc\u30b9\u30d5\u30a1\u30a4\u30eb\uff08*.java\uff09\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
 Dialog.Common.notTestClass=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
 Dialog.Common.confirmToChangeToJUnitVersion3=JUnit 3.x\u306e\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u306b\u5909\u66f4\u3057\u307e\u3059\u304b\uff1f
