maven plugin 1.1 released

--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -3,6 +3,10 @@
 	http://junithelper.org/
 ------------------------------------------
 
+* Release Notes - 1.0.1
+
+** Internal improvement only.
+
 * Release Notes - 1.0.0
 
 ** Bug
