--- a/junithelper-eclipse-plugin/src/main/resources/application_en.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_en.properties
@@ -29,6 +29,10 @@ Preference.TestMethodGen.usingMockEasyMock=EasyMock
 Preference.TestMethodGen.usingMockJMock2=JMock2
 Preference.TestMethodGen.usingMockMockito=Mockito
 Preference.TestMethodGen.usingMockJMockit=JMockit
+Preference.TestMethodGen.descriptionForTestingPatternComments=Select your favorite testing pattern comments.
+Preference.TestMethodGen.commentsNone=None
+Preference.TestMethodGen.commentsArrangeActAssert=Arrange-Act-Assert
+Preference.TestMethodGen.commentsGivenWhenThen=Given-When-Then
 
 # Dialog
 Dialog.Common.title=JUnit Helper
