--- a/junithelper-eclipse-plugin/src/main/resources/application_ja.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_ja.properties
@@ -29,6 +29,10 @@ Preference.TestMethodGen.usingMockEasyMock=EasyMock
 Preference.TestMethodGen.usingMockJMock2=JMock2
 Preference.TestMethodGen.usingMockMockito=Mockito
 Preference.TestMethodGen.usingMockJMockit=JMockit
+Preference.TestMethodGen.descriptionForTestingPatternComments=\u304a\u597d\u307f\u306e\u30c6\u30b9\u30c8\u30d1\u30bf\u30fc\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+Preference.TestMethodGen.commentsNone=\u6307\u5b9a\u306a\u3057
+Preference.TestMethodGen.commentsArrangeActAssert=Arrange-Act-Assert
+Preference.TestMethodGen.commentsGivenWhenThen=Given-When-Then
 
 # Dialog
 Dialog.Common.title=JUnit Helper
