--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -3,6 +3,10 @@
 	http://junithelper.org/
 ------------------------------------------
 
+* Release Notes - 1.5
+
+** Versioning policy has been changed. This version is the same as version 1.0.4.
+
 * Release Notes - 1.0.4
 
 ** Feature Request
