Preparing for release 1.8

--- a/junithelper-core/release/release_notes.txt
+++ b/junithelper-core/release/release_notes.txt
@@ -3,6 +3,11 @@
 	http://junithelper.org/
 ------------------------------------------
 
+* Release Notes - 1.8
+
+** Bug
+	* Issue 69:	Extension: Missing semicolon for constructor args
+
 * Release Notes - 1.7
 
 ** Bug
