--- a/junithelper-eclipse-plugin/src/main/resources/application_en.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_en.properties
@@ -2,6 +2,14 @@
 Preference.Common.description=Specify the source folders.
 Preference.Common.srcMainPath=Production source code folder
 Preference.Common.srcTestPath=Test source code folder
+Preference.Common.lineBreakPolicy=Line break policy
+Preference.Common.lineBreakPolicy.description=Specify line break policy.
+Preference.Common.lineBreakPolicy.forceCRLF=CRLF
+Preference.Common.lineBreakPolicy.forceLF=LF
+Preference.Common.lineBreakPolicy.forceNewFileCRLF=CRLF(only new file)  
+Preference.Common.lineBreakPolicy.forceNewFileLF=LF(only new file)  
+Preference.Common.useSoftTabs=Use soft tabs
+Preference.Common.softTabSize=soft tab size
 Preference.Common.outputFileEncoding=Default file encoding
 Preference.TestClassGen.description=Specify JUnit version and the TestCase to extend.
 Preference.TestClassGen.junitVersion=JUnit version
