--- a/junithelper-eclipse-plugin/src/main/resources/application_ja.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_ja.properties
@@ -1,9 +1,17 @@
 # Preference
-Preference.Common.description=\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+Preference.Common.description=\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Preference.Common.srcMainPath=\u30c6\u30b9\u30c8\u5bfe\u8c61\u306e\u30bd\u30fc\u30b9\u30d5\u30a9\u30eb\u30c0
 Preference.Common.srcTestPath=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30bd\u30fc\u30b9\u30d5\u30a9\u30eb\u30c0
+Preference.Common.lineBreakPolicy=\u6539\u884c\u30b3\u30fc\u30c9\u306e\u30dd\u30ea\u30b7\u30fc
+Preference.Common.lineBreakPolicy.description=\u6539\u884c\u30b3\u30fc\u30c9\u306e\u30dd\u30ea\u30b7\u30fc\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Preference.Common.lineBreakPolicy.forceCRLF=CRLF
+Preference.Common.lineBreakPolicy.forceLF=LF
+Preference.Common.lineBreakPolicy.forceNewFileCRLF=CRLF(\u65b0\u898f\u4f5c\u6210\u306e\u307f\u6709\u52b9)  
+Preference.Common.lineBreakPolicy.forceNewFileLF=LF(\u65b0\u898f\u4f5c\u6210\u306e\u307f\u6709\u52b9)  
+Preference.Common.useSoftTabs=\u30bd\u30d5\u30c8\u30bf\u30d6\u3092\u4f7f\u3046
+Preference.Common.softTabSize=\u30bd\u30d5\u30c8\u30bf\u30d6\u306e\u30b5\u30a4\u30ba
 Preference.Common.outputFileEncoding=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u30d5\u30a1\u30a4\u30eb\u30a8\u30f3\u30b3\u30fc\u30c7\u30a3\u30f3\u30b0
-Preference.TestClassGen.description=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3068\u7d99\u627f\u3059\u308b\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+Preference.TestClassGen.description=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3068\u7d99\u627f\u3059\u308b\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Preference.TestClassGen.junitVersion=JUnit\u306e\u30d0\u30fc\u30b8\u30e7\u30f3
 Preference.TestClassGen.junitVersion3=JUnit 3.x
 Preference.TestClassGen.junitVersion4=JUnit 4.x
@@ -23,31 +31,31 @@ Preference.TestMethodGen.includePackageLocal= \"package local\"\u30e1\u30bd\u30c
 Preference.TestMethodGen.enabledException=\u4f8b\u5916\u304cthrow\u3055\u308c\u308b\u30d1\u30bf\u30fc\u30f3\u3082\u30c6\u30b9\u30c8\u3059\u308b 
 Preference.TestMethodGen.excludesAccessors= \u30a2\u30af\u30bb\u30b5(setter/getter)\u3092\u30c6\u30b9\u30c8\u5bfe\u8c61\u306b\u3057\u306a\u3044
 Preference.TestMethodGen.enabledTestMethodSampleImpl= \u30c6\u30b9\u30c8\u30e1\u30bd\u30c3\u30c9\u306e\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u5b9f\u88c5\u3092\u751f\u6210\u3059\u308b
-Preference.TestMethodGen.descriptionForMock=\u304a\u597d\u307f\u306e\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+Preference.TestMethodGen.descriptionForMock=\u304a\u597d\u307f\u306e\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Preference.TestMethodGen.usingMockNone=\u6307\u5b9a\u306a\u3057
 Preference.TestMethodGen.usingMockEasyMock=EasyMock
 Preference.TestMethodGen.usingMockJMock2=JMock2
 Preference.TestMethodGen.usingMockMockito=Mockito
 Preference.TestMethodGen.usingMockJMockit=JMockit
-Preference.TestMethodGen.descriptionForTestingPatternComments=\u304a\u597d\u307f\u306e\u30c6\u30b9\u30c8\u30d1\u30bf\u30fc\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+Preference.TestMethodGen.descriptionForTestingPatternComments=\u304a\u597d\u307f\u306e\u30c6\u30b9\u30c8\u30d1\u30bf\u30fc\u30f3\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Preference.TestMethodGen.commentsNone=\u6307\u5b9a\u306a\u3057
 Preference.TestMethodGen.commentsArrangeActAssert=Arrange-Act-Assert
 Preference.TestMethodGen.commentsGivenWhenThen=Given-When-Then
 
 # Dialog
 Dialog.Common.title=JUnit Helper
-Dialog.Common.invalidPreference=\u8a2d\u5b9a\u304c\u4e0d\u6b63\u3067\u3059\u3002\u78ba\u8a8d\u3057\u3066\u4e0b\u3055\u3044\u3002
+Dialog.Common.invalidPreference=\u8a2d\u5b9a\u304c\u4e0d\u6b63\u3067\u3059\u3002\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Dialog.Common.confirmToExecute=\u5b9f\u884c\u3057\u307e\u3059\u304b\uff1f
-Dialog.Common.required=\u64cd\u4f5c\u306e\u5bfe\u8c61\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
-Dialog.Common.selectOneOnly=\u64cd\u4f5c\u306e\u5bfe\u8c61\u30d5\u30a1\u30a4\u30eb\u306f\u4e00\u3064\u3060\u3051\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
+Dialog.Common.required=\u64cd\u4f5c\u306e\u5bfe\u8c61\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Dialog.Common.selectOneOnly=\u64cd\u4f5c\u306e\u5bfe\u8c61\u30d5\u30a1\u30a4\u30eb\u306f\u4e00\u3064\u3060\u3051\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Dialog.Common.alreadyExist=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306f\u65e2\u306b\u5b58\u5728\u3057\u3066\u3044\u307e\u3059\u3002
 Dialog.Common.notExist=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002
 Dialog.Common.confirmToProceed=\u51e6\u7406\u3092\u7d9a\u884c\u3057\u307e\u3059\u304b\uff1f
-Dialog.Common.notToCreateNewFilePreference=\u5bfe\u5fdc\u3059\u308b\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002\u81ea\u52d5\u751f\u6210\u3057\u305f\u3044\u5834\u5408\u306f\u8a2d\u5b9a\u3092\u898b\u76f4\u3057\u3066\u4e0b\u3055\u3044\u3002
+Dialog.Common.notToCreateNewFilePreference=\u5bfe\u5fdc\u3059\u308b\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002\u81ea\u52d5\u751f\u6210\u3057\u305f\u3044\u5834\u5408\u306f\u8a2d\u5b9a\u3092\u898b\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Dialog.Common.confirmToCreateNewFile=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u3092\u65b0\u3057\u304f\u4f5c\u6210\u3057\u307e\u3059\u304b\uff1f
-Dialog.Common.resourceRefreshError=\u30ef\u30fc\u30af\u30b9\u30da\u30fc\u30b9\u306e\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u30d5\u30a1\u30a4\u30eb\u3084\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u66f8\u304d\u8fbc\u307f\u6a29\u9650\u3092\u78ba\u8a8d\u3057\u3066\u4e0b\u3055\u3044\u3002
-Dialog.Common.selectJavaFile=Java\u30bd\u30fc\u30b9\u30d5\u30a1\u30a4\u30eb\uff08*.java\uff09\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
-Dialog.Common.notTestClass=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
+Dialog.Common.resourceRefreshError=\u30ef\u30fc\u30af\u30b9\u30da\u30fc\u30b9\u306e\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u30d5\u30a1\u30a4\u30eb\u3084\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u66f8\u304d\u8fbc\u307f\u6a29\u9650\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Dialog.Common.selectJavaFile=Java\u30bd\u30fc\u30b9\u30d5\u30a1\u30a4\u30eb\uff08*.java\uff09\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Dialog.Common.notTestClass=\u30c6\u30b9\u30c8\u30af\u30e9\u30b9\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Dialog.Common.confirmToChangeToJUnitVersion3=JUnit 3.x\u306e\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u306b\u5909\u66f4\u3057\u307e\u3059\u304b\uff1f
 Dialog.Common.confirmToChangeToJUnitVersion4=JUnit 4.x\u306e\u30c6\u30b9\u30c8\u30b1\u30fc\u30b9\u306b\u5909\u66f4\u3057\u307e\u3059\u304b\uff1f
 
