--- a/junithelper-eclipse-plugin/src/main/resources/application_en.properties
+++ b/junithelper-eclipse-plugin/src/main/resources/application_en.properties
@@ -9,7 +9,7 @@ Preference.Common.lineBreakPolicy.forceLF=LF
 Preference.Common.lineBreakPolicy.forceNewFileCRLF=CRLF(only new file)  
 Preference.Common.lineBreakPolicy.forceNewFileLF=LF(only new file)  
 Preference.Common.useSoftTabs=Use soft tabs
-Preference.Common.softTabSize=soft tab size
+Preference.Common.softTabSize=Soft tab size
 Preference.Common.outputFileEncoding=Default file encoding
 Preference.TestClassGen.description=Specify JUnit version and the TestCase to extend.
 Preference.TestClassGen.junitVersion=JUnit version
